--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<div id="main">
+
+<header>
   <nav>
     <ul>
-      <!-- Sistema de enrutado routerLinkActive y routerLink -->
-      <li routerLinkActive='activated-tab'><a [routerLink]="['/forms']">Formularios</a></li>
-      <li routerLinkActive='activated-tab'><a [routerLink]="['/prueba-uno']">Servicios</a></li>
-      <li routerLinkActive='activated-tab'><a [routerLink]="['/prueba-dos']">Contacto</a></li>
+      <li><a [routerLink]="['/home']" class="nav-link" routerLinkActive='activated-tab'><fa-icon [icon]="faHome"></fa-icon></a></li>
+      <li ><a [routerLink]="['/angular']" class="nav-link angColor" routerLinkActive='activated-tab angColorActive'><fa-icon [icon]="faAngular"></fa-icon></a></li>
+      <li><a [routerLink]="['/html']" class="nav-link htmlColor" routerLinkActive='activated-tab htmlColorActive'><fa-icon [icon]="faHTML"></fa-icon></a></li>
+      <li><a [routerLink]="['/css']" class="nav-link cssColor" routerLinkActive='activated-tab cssColorActive'><fa-icon [icon]="faCSS"></fa-icon></a></li>
+      <li><a [routerLink]="['/js']" class="nav-link jsColor" routerLinkActive='activated-tab jsColorActive'><fa-icon [icon]="faJs"></fa-icon></a></li>
     </ul>
   </nav>
-</div>
+</header>
 
 <router-outlet></router-outlet>
