--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,41 +5,70 @@
 
 body {
   font: 15px/1.3 'Open Sans', sans-serif;
-  color: #5e5b64;
+  color: #c5c0c1;
   text-align: center;
 }
 
 nav {
-  width: max-content;
+  width: 100%;
   ul {
-    margin: 60px auto 45px;
-    background-color: #aaa;
+    margin: 0px;
+    background-color: #c5c0c1;
     border-radius: 2px;
 
     li {
       width: auto;
       display: inline-block;
-
-      .activated-tab {
-        background-color: #e35885;
-      }
-      
-      a {
-        display: inline-block;
-        padding: 18px 30px;
-        color: #fff !important;
-        font-weight: bold;
-        font-size: 12px;
-        text-decoration: none !important;
-        text-transform: uppercase;
-        background-color: transparent;
-      }
     }
   }
-
 }
 
+.nav-link {
+  display: inline-block;
+  padding: 18px 30px;
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  background-color: transparent;
+  &.htmlColor {
+    &:hover{
+      color: #E44D26;
+    }
+  }
+  &.angColor {
+    &:hover{
+      color: #b52e31;
+    }
+  }
+  &.jsColor {
+    &:hover{
+      color: #F0DB4F;
+    }
+  }
+  &.cssColor {
+    &:hover{
+      color: #2965f1;
+    }
+  }
+  &.activated-tab {
+    background-color: #0a1612;
+    &.htmlColorActive {
+      color: #E44D26;
+    }
+    &.angColorActive {
+      color: #b52e31;
+    }
+    &.jsColorActive {
+      color: #F0DB4F;
+    }
+    &.cssColorActive {
+      color: #2965f1;
+    }
+  }
+}
 
-.activated-tab {
-  background-color: #e35885;
+.red-color {
+  color: red !important;
 }
