--- a/src/app/containers/angular/angular.component.html
+++ b/src/app/containers/angular/angular.component.html
@@ -6,6 +6,7 @@
             <li routerLinkActive='activated-tab'><a [routerLink]="['/angular/prueba-dos']">Contacto</a></li>
         </ul>
     </nav>
+    <!-- <app-nav-bar [navData]="navBarData"></app-nav-bar> -->
 </header>
 
 <router-outlet></router-outlet>
