--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,3 +1,34 @@
-<p>
-    Home Woks!!!
-</p>
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a [routerLink]="['/angular']">
+                    <figure>
+                        <img class="img-home" src="../../../assets/images/angular.svg">
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a [routerLink]="['/html']">
+                    <figure>
+                        <img class="img-home" src="../../../assets/images/HTML5_logo_black.svg">
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a [routerLink]="['/js']">
+                    <figure>
+                        <img class="img-home" src="../../../assets/images/javascript-1.svg">
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a [routerLink]="['/css']">
+                    <figure>
+                        <img class="img-home" src="../../../assets/images/CSS3_logo.svg">
+                    </figure>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
