--- a/src/app/containers/angular/angular.component.html
+++ b/src/app/containers/angular/angular.component.html
@@ -1,12 +1,12 @@
 <header>
-    <nav>
+    <!-- <nav>
         <ul>    
             <li routerLinkActive='activated-tab'><a [routerLink]="['/angular/forms']">Formularios</a></li>
             <li routerLinkActive='activated-tab'><a [routerLink]="['/angular/prueba-uno']">Servicios</a></li>
             <li routerLinkActive='activated-tab'><a [routerLink]="['/angular/prueba-dos']">Contacto</a></li>
         </ul>
-    </nav>
-    <!-- <app-nav-bar [navData]="navBarData"></app-nav-bar> -->
+    </nav> -->
+    <app-nav-bar [navData]="navBarData"></app-nav-bar>
 </header>
 
 <router-outlet></router-outlet>
