--- a/src/app/containers/angular/angular.component.html
+++ b/src/app/containers/angular/angular.component.html
@@ -8,5 +8,6 @@
     </nav> -->
     <app-nav-bar [navData]="navBarData"></app-nav-bar>
 </header>
-
-<router-outlet></router-outlet>
+<main>
+    <router-outlet></router-outlet>
+</main>
