--- a/src/app/containers/angular/containers/formularios/formularios.component.scss
+++ b/src/app/containers/angular/containers/formularios/formularios.component.scss
@@ -1,7 +1,7 @@
 
-.expansion-panel {
+/* .expansion-panel {
   background-color: #DEE7DC;
-}
+} */
 
 .step-content {
   padding: 30px 30px 35px 30px;
