--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@
     width: 100%;
     ul {
       margin: 0px;
-      background-color: #c5c0c1;
+      background-color: #686868;
       border-radius: 2px;
   
       li {
@@ -16,7 +16,7 @@
     }
   }
   
-  .nav-link {
+  .nav-enlace {
     display: inline-block;
     padding: 9px 19px;
     color: white;
