--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav>
     <ul>
-        <li *ngFor="let item of navData"><a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}"><fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>{{item.text}}</a></li>
+        <li *ngFor="let item of navData"><a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}"><fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>{{item.text}}</a></li>
     </ul>
 </nav>
