--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,34 +1,34 @@
-<header>
+<main>
     <nav>
         <ul>
             <li>
-                <a [routerLink]="['/angular']">
+                <a [routerLink]="['/angular']" title="Angular">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/angular.svg">
+                        <img class="img-home" src="../../../assets/images/angular.svg" alt="Angular">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/html']">
+                <a [routerLink]="['/html']" title="HTML5">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/HTML5_logo_black.svg">
+                        <img class="img-home" src="../../../assets/images/HTML5_logo_black.svg" alt="HTML5">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/js']">
+                <a [routerLink]="['/js']" title="JavaScript">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/javascript-1.svg">
+                        <img class="img-home" src="../../../assets/images/javascript-1.svg" alt="JavaScript">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/css']">
+                <a [routerLink]="['/css']" title="CSS3">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/CSS3_logo.svg">
+                        <img class="img-home" src="../../../assets/images/CSS3_logo.svg" alt="CSS3">
                     </figure>
                 </a>
             </li>
         </ul>
     </nav>
-</header>
+</main>
