--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,4 +1,10 @@
 <main>
+    <div class="front-logo">
+        <figure>
+            <img src="../../../assets/images/logo-front.png" alt="Front Logo">
+        </figure>   
+    </div>
+    
     <nav>
         <ul>
             <li>
