--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -12,7 +12,7 @@ nav {
     ul {
         margin: 0px;
         border-radius: 2px;
-        
+        padding: 0px;
         li {
         width: auto;
         display: inline-block;
