--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -5,7 +5,8 @@
       margin: 0px;
       background-color: #686868;
       border-radius: 2px;
-  
+      text-align: center;
+      padding: 0px;
       li {
         width: auto;
         display: inline-block;
