--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
     <div class="front-logo">
         <figure>
-            <img src="../../../assets/images/logo-front.png" alt="Front Logo">
+            <img src="./assets/images/logo-front.png" alt="Front Logo">
         </figure>   
     </div>
     
@@ -10,28 +10,28 @@
             <li>
                 <a [routerLink]="['/angular']" title="Angular">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/angular.svg" alt="Angular">
+                        <img class="img-home" src="./assets/images/angular.svg" alt="Angular">
                     </figure>
                 </a>
             </li>
             <li>
                 <a [routerLink]="['/html']" title="HTML5">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/HTML5_logo_black.svg" alt="HTML5">
+                        <img class="img-home" src="./assets/images/HTML5_logo_black.svg" alt="HTML5">
                     </figure>
                 </a>
             </li>
             <li>
                 <a [routerLink]="['/js']" title="JavaScript">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/javascript-1.svg" alt="JavaScript">
+                        <img class="img-home" src="./assets/images/javascript-1.svg" alt="JavaScript">
                     </figure>
                 </a>
             </li>
             <li>
                 <a [routerLink]="['/css']" title="CSS3">
                     <figure>
-                        <img class="img-home" src="../../../assets/images/CSS3_logo.svg" alt="CSS3">
+                        <img class="img-home" src="./assets/images/CSS3_logo.svg" alt="CSS3">
                     </figure>
                 </a>
             </li>
