--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,12 @@
 <nav>
     <ul>
-        <li *ngFor="let item of navData"><a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}"><fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>{{item.text}}</a></li>
+        <li *ngFor="let item of navData">
+            <a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}">
+                <figure>
+                    <fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>
+                </figure>
+                <span *ngIf="item.text">{{item.text}}</span>
+            </a>
+        </li>
     </ul>
 </nav>
