comandos script en package.json

--- a/documentation/components/NavBarComponent.html
+++ b/documentation/components/NavBarComponent.html
@@ -322,9 +322,7 @@ export class NavBarComponent {
     &lt;ul&gt;
         &lt;li *ngFor&#x3D;&quot;let item of navData&quot;&gt;
             &lt;a routerLink&#x3D;&quot;{{item.link}}&quot; class&#x3D;&quot;{{item.class}}&quot; routerLinkActive&#x3D;&quot;{{item.activateClass}}&quot; title&#x3D;&quot;{{item.title}}&quot;&gt;
-                &lt;figure&gt;
-                    &lt;fa-icon *ngIf&#x3D;&quot;item.icon&quot; [icon]&#x3D;&quot;icons[item.icon]&quot;&gt;&lt;/fa-icon&gt;
-                &lt;/figure&gt;
+                &lt;fa-icon *ngIf&#x3D;&quot;item.icon&quot; [icon]&#x3D;&quot;icons[item.icon]&quot;&gt;&lt;/fa-icon&gt;
                 &lt;span *ngIf&#x3D;&quot;item.text&quot;&gt;{{item.text}}&lt;/span&gt;
             &lt;/a&gt;
         &lt;/li&gt;
@@ -433,7 +431,7 @@ export class NavBarComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><nav>    <ul>        <li *ngFor="let item of navData">            <a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}">                <figure>                    <fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>                </figure>                <span *ngIf="item.text">{{item.text}}</span>            </a>        </li>    </ul></nav></div>'
+        var COMPONENT_TEMPLATE = '<div><nav>    <ul>        <li *ngFor="let item of navData">            <a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}">                <fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>                <span *ngIf="item.text">{{item.text}}</span>            </a>        </li>    </ul></nav></div>'
     var COMPONENTS = [{'name': 'AccordionComponent', 'selector': 'app-accordion'},{'name': 'AngularLandingComponent', 'selector': 'app-angular-landing'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CssLandingComponent', 'selector': 'app-css-landing'},{'name': 'FormComponent', 'selector': 'app-form'},{'name': 'FormComponentsComponent', 'selector': 'app-form-components'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'HtmlLandingComponent', 'selector': 'app-html-landing'},{'name': 'JsLandingComponent', 'selector': 'app-js-landing'},{'name': 'NavBarComponent', 'selector': 'app-nav-bar'},{'name': 'OthersComponent', 'selector': 'app-others'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'NavBarComponent'};
