--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -8,28 +8,28 @@
     <nav>
         <ul>
             <li>
-                <a [routerLink]="['/angular-landing']" title="Angular">
+                <a [routerLink]="['/angular-landing']" title="{{'angular.title' | translate}}">
                     <figure>
                         <img class="img-home" src="./assets/images/angular.svg" alt="Angular">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/html-landing']" title="HTML5">
+                <a [routerLink]="['/html-landing']" title="{{'html.title' | translate}}">
                     <figure>
                         <img class="img-home" src="./assets/images/HTML5_logo_black.svg" alt="HTML5">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/js-landing']" title="JavaScript">
+                <a [routerLink]="['/js-landing']" title="{{'js.title' | translate}}">
                     <figure>
                         <img class="img-home" src="./assets/images/javascript-1.svg" alt="JavaScript">
                     </figure>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/css-landing']" title="CSS3">
+                <a [routerLink]="['/css-landing']" title="{{'css.title' | translate}}">
                     <figure>
                         <img class="img-home" src="./assets/images/CSS3_logo.svg" alt="CSS3">
                     </figure>
