--- a/src/app/containers/angular-landing/containers/form/form.component.html
+++ b/src/app/containers/angular-landing/containers/form/form.component.html
@@ -1,56 +1,56 @@
 <form grace-form [formGroup]="formExample">
-    <h2>Rellena tus datos</h2>
+    <h2>{{'angular.form.fill_your_data' | translate}}</h2>
     <div>
-        <label for="registeredOn">Fecha nacimiento </label>
+        <label for="registeredOn">{{'angular.form.birthDate' | translate}}</label>
         <input name="registeredOn" formControlName="registeredOn" type="date" />
     </div>
     <div>
-        <label for="name">Nombre </label>
-        <input name="name" formControlName="name" type="text" placeholder="Introduzca su nombre" />
+        <label for="name">{{'angular.form.name' | translate}}</label>
+        <input name="name" formControlName="name" type="text" placeholder="{{'angular.form.name_placeholder' | translate}}" />
     </div>
     <div>
-        <label for="lastName">Apellidos </label>
-        <input name="lastName" formControlName="lastName" type="text" placeholder="Introduzca sus apellidos" />
+        <label for="lastName">{{'angular.form.lastnames' | translate}}</label>
+        <input name="lastName" formControlName="lastName" type="text" placeholder="{{'angular.form.lastnames_placeholder' | translate}}" />
     </div>
     <div>
-        <label for="email">E-mail </label>
-        <input name="email" formControlName="email" type="email" placeholder="Introduzca su email" />
+        <label for="email">{{'angular.form.email' | translate}}</label>
+        <input name="email" formControlName="email" type="email" placeholder="{{'angular.form.email_placeholder' | translate}}" />
     </div>
     <div>
-        <label for="dni">DNI </label>
-        <input name="dni" formControlName="dni" type="text" placeholder="Introduzca su DNI" />
+        <label for="dni">{{'angular.form.id_card' | translate}}</label>
+        <input name="dni" formControlName="dni" type="text" placeholder="{{'angular.form.id_card_placeholder' | translate}}" />
     </div>
     <div>
-        <label for="password">Contraseña </label>
+        <label for="password">{{'angular.form.password' | translate}}</label>
         <input id="password" name="password" formControlName="password" type="password" />
-        <span class="error-msg" *ngIf="showError(formExample.get('password'))">{{ getError(formExample.get('password'))}}</span>
+        <span class="error-msg" *ngIf="showError(formExample.get('password'))">{{ getError(formExample.get('password')) | translate}}</span>
     </div>
 
     <div>
-        <span>Sexo </span>
-        <input id="mujer" type="radio" formControlName="sexo" value="mujer" /><label for="sexoMujer">Mujer</label>
-        <input id="hombre" type="radio" formControlName="sexo" value="hombre"><label for="sexoHombre">Hombre</label>
+        <span>{{'angular.form.gender' | translate}}</span>
+        <input id="mujer" type="radio" formControlName="sexo" value="mujer" /><label for="sexoMujer">{{'angular.form.women' | translate}}</label>
+        <input id="hombre" type="radio" formControlName="sexo" value="hombre"><label for="sexoHombre">{{'angular.form.man' | translate}}</label>
     </div>
 
     <div>
-        <span>Indique su situación actual </span>
+        <span>{{'angular.form.marital_status' | translate}}</span>
         <select name="genero" formControlName="state">
-            <option>Soltero</option>
-            <option>Casado</option>
+            <option>{{'angular.form.single' | translate}}</option>
+            <option>{{'angular.form.maried' | translate}}</option>
         </select>
     </div>
     <div>
-        <span>Incluir foto </span>
+        <span>{{'angular.form.include_foto' | translate}}</span>
         <input type="file" name="photo" formControlName="photo" />
     </div>
 
     <div>
-        <button (click)="register()" [disabled]="formExample.invalid">Validar</button>
+        <button (click)="register()" [disabled]="formExample.invalid">{{'angular.form.validate' | translate}}</button>
     </div>
 </form>
 
 <div *ngIf="isClicked">
-    <h3>Datos usuario:</h3>
+    <h3>{{'angular.form.user_data' | translate}}</h3>
     <p>{{user.name}} {{user.lastName}}</p>
     <p>{{user.email}}</p>
     <p>{{user.dni}}</p>
