--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <nav>
     <ul>
         <li *ngFor="let item of navData">
-            <a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title}}">
+            <a routerLink="{{item.link}}" class="{{item.class}}" routerLinkActive="{{item.activateClass}}" title="{{item.title | translate}}">
                 <fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>
-                <span *ngIf="item.text">{{item.text}}</span>
+                <span *ngIf="item.text">{{item.text | translate}}</span>
             </a>
         </li>
     </ul>
